--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ github_url: "https://github.com/sitongan"
 pinterest_url:
 slack_url:
 dribbble_url:
+skype_url: "https://join.skype.com/invite/bkD0CKdOcxGW"
 
 # Google Analytics Tracking ID goes here:
 google_analytics: UA-123201178-1
